# AstridML

./: .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_REQUIREMENTS_CHECKLIST.md  README.md  example.py  pyproject.toml  verify_installation.py
.github/workflows/: ci.yml  main.yml
astridml/: __init__.py
astridml/api/: __init__.py  server.py
astridml/dpm/: __init__.py  preprocessor.py
astridml/models/: __init__.py  predictor.py  recommender.py
astridml/sdg/: __init__.py  generator.py
examples/: README.md  basic_pipeline.py  data_generation.py  recommendations.py
tests/integration/: test_api.py
tests/unit/: test_dpm.py  test_models.py  test_sdg.py
