[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "astridml"
version = "0.1.0"
description = "This project contains everything needed to develop ML pipeline for Astrid Athletics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

